--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,13 @@ repos:
 
 - repo: local
   hooks:
-    - id: poetry-run-flake8-black
-      name: poetry run flake8 and black
-      entry: poetry run flake8 && poetry run black --check --diff
+    - id: poetry-run-ruff
+      name: poetry run ruff
+      entry: poetry run ruff .
+      language: system
+      types: [python]
+    - id: poetry-run-black
+      name: poetry run black
+      entry: poetry run black .
       language: system
       types: [python]
