--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,4 +1,24 @@
-results_dir: ./results
-methods:
-  - file_path: ../test_projects/verification_optimization/unital.dfy
-    method_name: UnitIsUnique
+Results_dir: ./results
+Prompt:
+  Context:
+  - File_to_fix: ./prompts/4586789e1af32732224d7b7c31ccb55035ffac04.dfy
+    Fix: ./prompts/4586789e1af32732224d7b7c31ccb55035ffac04_fix.dfy
+    Question_prompt: "Can you make this proof more stable:\n"
+    Answer_prompt: "Absolutely, you can add an assertion
+    inspired by the postcondition such as:\n"
+  - File_to_fix: ./prompts/109.dfy
+    Fix: ./prompts/109_fix.dfy
+    Question_prompt: "Can you make this proof more stable:\n"
+    Answer_prompt: "Absolutely, you can add assertions
+    in a calc statement made by decomposing the operation using the other lemmas:"
+  System_prompt: "You are a Dafny formal method expert.
+  To fix proofs that are brittle or unstable you can add assertions
+  inspired from the code or from the ensure annotations."
+  Fix_prompt: "Can you make this proof more stable?"
+Model_parameters:
+  Temperature: 0
+  Max_tokens: 1024
+  Model: gpt-4
+Methods:
+  - File_path: ../test_projects/verification_optimization/unital.dfy
+    Method_name: UnitIsUnique
