--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.11"
 openai = "0.28.1"
 ruff = "^0.1.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
