--- a/configs/config_pruning.yaml
+++ b/configs/config_pruning.yaml
@@ -1,4 +1,6 @@
 Results_dir: ./results
-Project_path: /exp/test_projects/libraries/src/dafny/Collections/
+Project_path: /exp/test_projects/libraries/src
+# Project_path: /exp/test_projects/libraries/src/Collections/Sets
 Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:300 --disable-nonlinear-arithmetic"
-Stats_file: ./results/stats_pruning.txt
+Stats_file: ./results/stats_pruning_libraries.txt
+Stats_file: ./results/stats_pruning_libraries_2.txt
