--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,17 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 openai = "0.28.1"
 ruff = "^0.1.0"
 pyyaml = "^6.0.1"
+pandas = "^2.1.3"
+matplotlib = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.10.0"
+black = {extras = ["jupyter"], version = "^23.11.0"}
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
