--- a/configs/config_pruning_vmc.yaml
+++ b/configs/config_pruning_vmc.yaml
@@ -1,4 +1,4 @@
 Results_dir: ./results
 Project_path: /exp/test_projects/Dafny-VMC
-Dafny_args: "--resource-limit 20000"
+Dafny_args: "--library /exp/test_projects/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
 Stats_file: ./results/stats_pruning_dafnyVMC.txt
