--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,8 @@ repos:
       entry: poetry run black .
       language: system
       types: [python]
+    - id: poetry-run-test
+      name: poetry run test
+      entry: poetry run black .
+      language: system
+      types: [python]
