--- a/configs/config_llm_libraries_sample10.yaml
+++ b/configs/config_llm_libraries_sample10.yaml
@@ -1,4 +1,4 @@
-Results_dir: ./results
+Results_dir: ./results_llm
 Prompt:
   Context:
   - File_to_fix: ./prompts/4586789e1af32732224d7b7c31ccb55035ffac04.dfy
@@ -16,12 +16,12 @@ Prompt:
   inspired from the code or from the ensure annotations."
   Fix_prompt: "Can you make this proof more stable?"
   Method_context: "File"
+  Feedback: True
 Model_parameters:
   Temperature: 0
-  Max_tokens: 1024
   Model: gpt-4
+  Max_tokens: 2048
+  Prompt_limit: 8192
   Encoding: "cl100k_base"
-Methods:
-  - File_path: ./tests/ressources/unital.dfy
-    Method_name: UnitIsUnique
-Results_file: ./results/fixes_llm_test.csv
+Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:300 --disable-nonlinear-arithmetic"
+Results_file: ./results_llm/stats_llm_libraries_sample10_context.csv
