--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ruff = "^0.1.0"
 pyyaml = "^6.0.1"
 pandas = "^2.1.3"
 matplotlib = "^3.8.1"
+tiktoken = "^0.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
