--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-openai = "0.28.1"
+openai = "^1.12.0"
 ruff = "^0.1.0"
 pyyaml = "^6.0.1"
 pandas = "^2.1.3"
 matplotlib = "^3.8.1"
 tiktoken = "^0.5.2"
+guidance = "^0.1.10"
 
 
 [tool.poetry.group.dev.dependencies]
