--- a/configs/config_llm_libraries_sample10.yaml
+++ b/configs/config_llm_libraries_sample10.yaml
@@ -17,8 +17,11 @@ Prompts:
       Your task is to insert an assertion in the <assertion> placeholder to make it verify."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
-    Feedback: False
-    Nb_tries: 2
+    Feedback: True
+    Nb_tries: 10
+    Error_feedback: True
+    Prompt_name: "error_n_feedback"
+
 Model_parameters:
   Temperature: 1
   Model: gpt-4
