--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^2.1.3"
 matplotlib = "^3.8.1"
 tiktoken = "^0.5.2"
 guidance = "^0.1.10"
+gspread = "^6.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
