--- a/configs/config_llm_libraries_sample10_staticp.yaml
+++ b/configs/config_llm_libraries_sample10_staticp.yaml
@@ -1,14 +1,10 @@
 Results_dir: ./results_llm
 Prompts:
   - Context:
-    - File_to_fix: ./prompts/4586789e1af32732224d7b7c31ccb55035ffac04.dfy
-      Fix: ./prompts/4586789e1af32732224d7b7c31ccb55035ffac04_fix.dfy
       Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
-      Answer_prompt: ""
-    - File_to_fix: ./prompts/LemmaMaxOfConcat.dfy
-      Fix: ./prompts/LemmaMaxOfConcat_fix.dfy
-      Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
-      Answer_prompt: ""
+      Threshold: 0.2
+      Min_cluster_length: 1
+      Training_file: ./results/random_libraries_assertion.csv
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
@@ -21,7 +17,7 @@ Prompts:
     Error_feedback: False
     Nb_tries: 5
     Prompt_name: "placeholder"
-    Type: "Provided"
+    Type: "Static"
 
 Model_parameters:
   Temperature: 1
