--- a/configs/main/config_repos/config_llm_libraries_errorplaceholder.yaml
+++ b/configs/main/config_repos/config_llm_libraries_errorplaceholder.yaml
@@ -1,10 +1,6 @@
 Results_dir: ./results_llm
 Prompts:
   - Context:
-      Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
-      Threshold: 0.7
-      Min_cluster_length: 6
-      Training_file: ./results/training_libraries.csv
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
@@ -13,11 +9,11 @@ Prompts:
       Your task is to insert an assertion in the <assertion> placeholder to make it verify."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
-    Feedback: False
+    Feedback: True
     Error_feedback: False
     Nb_tries: 10
-    Prompt_name: "static"
-    Type: "Static"
+    Prompt_name: "errorplaceholder"
+    Type: "Provided"
     Placeholder: True
 
 Model_parameters:
