--- a/configs/main/config_repos/config_llm_DafnyVMC_errorplaceholder.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_errorplaceholder.yaml
@@ -1,10 +1,6 @@
 Results_dir: ./results_llm
 Prompts:
   - Context:
-      Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
-      Threshold: 0.7
-      Min_cluster_length: 6
-      Training_file: ./results/training_libraries.csv
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
@@ -13,11 +9,11 @@ Prompts:
       Your task is to insert an assertion in the <assertion> placeholder to make it verify."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
-    Feedback: False
-    Error_feedback: False
+    Feedback: True
     Nb_tries: 10
-    Prompt_name: "static"
-    Type: "Static"
+    Error_feedback: False
+    Prompt_name: "ErrorPlaceholder"
+    Type: "Provided"
     Placeholder: True
 
 Model_parameters:
@@ -26,5 +22,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:300 --disable-nonlinear-arithmetic"
-Results_file: ./results_llm/stats_llm_libraries_sample20_placeholder.csv
+Dafny_args: "--library /exp/test_projects/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
+Results_file: ./results_llm/stats_llm_DafnyVMC_sample10_placeholder_4t.csv
