--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ gspread = "^6.0.2"
 multiprocess = "^0.70.16"
 numpy = "^1.26.4"
 scipy = "^1.12.0"
+scikit-learn = "^1.4.1.post1"
 
 
 [tool.poetry.group.dev.dependencies]
