--- a/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
@@ -14,7 +14,7 @@ Prompts:
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: False
-    Nb_tries: 10
+    Nb_tries: 1
     Error_feedback: False
     Prompt_name: "static"
     Type: "Static"
@@ -22,7 +22,7 @@ Prompts:
 
 Model_parameters:
   Temperature: 1
-  Model: gpt-4
+  Model: gpt-4o
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
