add expected outputs for placeholder test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ scikit-learn = "^1.4.1.post1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = {extras = ["jupyter"], version = "^23.11.0"}
+black = { extras = ["jupyter"], version = "^23.11.0" }
 jupyter = "^1.0.0"
 
 [build-system]
@@ -32,13 +32,11 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
-ignore = [
-  "E402",
-  "E731"
-]
+ignore = ["E402", "E731"]
 exclude = [
   ".ipynb_checkpoints",
   ".pre-commit-config.yaml",
+  "tests_package/ressources",
 ]
 
 [tool.black]
@@ -55,6 +53,7 @@ exclude = '''
 | dist
 | .*ipynb_checkpoints.*
 | .pre-commit-config.yaml
+| tests_package/ressources
 )/
 '''
 
