--- a/configs/config_llm_cedar_sample10_static.yaml
+++ b/configs/config_llm_cedar_sample10_static.yaml
@@ -3,8 +3,8 @@ Prompts:
   - Context:
       Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
       Threshold: 0.3
-      Training_file: ./results/training_dafnyVMC.csv
-      Min_cluster_length: 2
+      Min_cluster_length: 3
+      Training_file: ./results/training_cedar.csv
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
@@ -14,8 +14,8 @@ Prompts:
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: False
-    Nb_tries: 1
     Error_feedback: False
+    Nb_tries: 1
     Prompt_name: "static"
     Type: "Static"
     Placeholder: True
@@ -27,5 +27,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--library /usr/local/home/eric/dafny_repos/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
-Results_file: ./results_llm/stats_llm_DafnyVMC_sample10_placeholder_4t.csv
+Dafny_args: "--verification-time-limit:300"
+Results_file: ./results_llm/stats_llm_cedar_sample10_placeholder_4t.csv
