--- a/configs/main/config_repos/config_llm_libraries_error.yaml
+++ b/configs/main/config_repos/config_llm_libraries_error.yaml
@@ -4,9 +4,8 @@ Prompts:
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
-      that does not verify because of an error indicated in between <error> tagsalong
-      along with its dependencies with the delimiter <dependencies>.
-      Your task is to insert an assertion in the <assertion> placeholder to make it verify."
+      that does not verify because of an error indicated in between <error> tags.
+      Your task is to insert at a certain line an assertion starting with `assert` to make it verify"
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: True
@@ -18,7 +17,7 @@ Prompts:
 
 Model_parameters:
   Temperature: 1
-  Model: gpt-4
+  Model: gpt-4o
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
