--- a/configs/main/config_repos/config_llm_DafnyVMC_placeholder.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_placeholder.yaml
@@ -4,13 +4,12 @@ Prompts:
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
-      that does not verify because of an error indicated in between <error> tagsalong
-      along with its dependencies with the delimiter <dependencies>.
+      that does not verify.
       Your task is to insert an assertion in the <assertion> placeholder to make it verify."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
-    Feedback: False
-    Nb_tries: 10
+    Feedback: True
+    Nb_tries: 20
     Error_feedback: False
     Prompt_name: "Placeholder"
     Type: "Provided"
@@ -18,7 +17,7 @@ Prompts:
 
 Model_parameters:
   Temperature: 1
-  Model: gpt-4
+  Model: gpt-4o
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
