add line numbers for llm assertion location

--- a/configs/main/config_repos/config_llm_DafnyVMC_baseline.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_baseline.yaml
@@ -5,7 +5,7 @@ Prompts:
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
       that does not verify.
-      Your task is to insert at a certain line an assertion starting with `assert` to make it verify"
+      Your task is to insert an assertion at a certain line to make it verify. Your answer must start with `assert`.
     Fix_prompt: "Can you fix this proof by inserting one assertion in the method <method>?"
     Method_context: "None"
     Feedback: False
