--- a/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
+++ b/configs/main/config_repos/config_llm_DafnyVMC_static.yaml
@@ -10,7 +10,7 @@ Prompts:
       You will be provided with a Dafny method indicated by the delimiter <method>
       that does not verify because of an error indicated in between <error> tagsalong
       along with its dependencies with the delimiter <dependencies>.
-      Your task is to insert an assertion in the <assertion> placeholder to make it verify."
+      Your task is to insert an assertion in the <assertion> placeholder to make it verify. Your answer must start with `assert`."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: False
