--- a/configs/main/config_repos/config_llm_cedar_dynamic.yaml
+++ b/configs/main/config_repos/config_llm_cedar_dynamic.yaml
@@ -11,12 +11,12 @@ Prompts:
       You will be provided with a Dafny method indicated by the delimiter <method>
       that does not verify because of an error indicated in between <error> tagsalong
       along with its dependencies with the delimiter <dependencies>.
-      Your task is to insert an assertion in the <assertion> placeholder to make it verify."
+      Your task is to insert an assertion in the <assertion> placeholder to make it verify. Your answer must start with `assert`."
     Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: False
     Error_feedback: False
-    Nb_tries: 10
+    Nb_tries: 20
     Prompt_name: "dynamic"
     Type: "Dynamic"
     Placeholder: True
@@ -27,5 +27,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--verification-time-limit:300"
+Dafny_args: "--verification-time-limit:30"
 Results_file: ./results_llm/stats_llm_cedar_sample10_placeholder_4t.csv
