--- a/configs/main/config_repos/config_llm_libraries_error.yaml
+++ b/configs/main/config_repos/config_llm_libraries_error.yaml
@@ -5,8 +5,8 @@ Prompts:
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
       that does not verify because of an error indicated in between <error> tags.
-      Your task is to insert at a certain line an assertion starting with `assert` to make it verify"
-    Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
+      Your task is to insert an assertion at a certain line to make it verify. Your answer must start with `assert`.
+    Fix_prompt: "Can you fix this proof by inserting one assertion in the method <method>?"
     Method_context: "None"
     Feedback: True
     Error_feedback: False
@@ -21,5 +21,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:300 --disable-nonlinear-arithmetic"
+Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:30 --disable-nonlinear-arithmetic"
 Results_file: ./results_llm/stats_llm_libraries_sample20_placeholder.csv
