--- a/configs/main/config_repos/config_llm_libraries_dynamicPlaceholder.yaml
+++ b/configs/main/config_repos/config_llm_libraries_dynamicPlaceholder.yaml
@@ -3,21 +3,21 @@ Prompts:
   - Context:
       Question_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
       Threshold: 6
-      Training_file: ./results/training_dafnyVMC.csv
+      Training_file: ./results/training_libraries.csv
       Max_size: 6
     System_prompt: |
       "You are a Dafny formal method expert.
       You will be provided with a Dafny method indicated by the delimiter <method>
       that does not verify.
       Your task is to insert an assertion in the <assertion> placeholder to make it verify. Your answer must start with `assert`."
-    Fix_prompt: "Can you fix this proof by inserting one assertion in the method?"
+    Fix_prompt: "Can you fix this proof by inserting one assertion in the <assertion> placeholder?"
     Method_context: "None"
     Feedback: False
-    Nb_tries: 10
     Error_feedback: False
-    Prompt_name: "Placeholder"
+    Nb_tries: 10
+    Prompt_name: "DynamicPlaceholder"
     Type: "Dynamic"
-    Placeholder: False
+    Placeholder: True
 
 Model_parameters:
   Temperature: 1
@@ -25,5 +25,5 @@ Model_parameters:
   Max_tokens: 2048
   Prompt_limit: 8192
   Encoding: "cl100k_base"
-Dafny_args: "--library /usr/local/home/eric/dafny_repos/Dafny-VMC/src/**/*.dfy --resource-limit 20000"
-Results_file: ./results_llm/stats_llm_DafnyVMC_sample10_placeholder_4t.csv
+Dafny_args: "--use-basename-for-filename --cores:2 --verification-time-limit:30 --disable-nonlinear-arithmetic"
+Results_file: ./results_llm/stats_llm_libraries_sample20_placeholder.csv
